--- a/src/main/asciidoc/lecture-en.adoc
+++ b/src/main/asciidoc/lecture-en.adoc
@@ -60,6 +60,7 @@ image::kafka_testing_deep_dive.png[{image-70-width}]
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -86,6 +87,7 @@ digraph G {
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -113,6 +115,7 @@ digraph G {
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -139,6 +142,7 @@ digraph G {
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -165,6 +169,7 @@ digraph G {
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -191,6 +196,7 @@ digraph G {
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
   
@@ -239,7 +245,15 @@ image::real_chemistry.jpg[canvas, size=cover]
 
 == What Do We Have for Real Experiments?
 
-image::testcontainers_transparent.png[{image-60-width}]
+image::testcontainers-logo.svg[{image-60-width}]
+
+== What Do We Have for Real Experiments?
+
+image::testcontainers-logo.svg[{image-60-width}]
+
+"An open source framework for providing throwaway, lightweight instances of databases, message brokers, web browsers, or just about anything that can run in a Docker container."
+
+image::tc_support.png[]
 
 == TestContainers in Action
 
@@ -259,10 +273,10 @@ underTest = new RedisBackedCache(address, port);
 
 [none]
 [%step]
-* -- Mocks -- They are unreliable
-* -- Let's raise everything in test containers and test it!
-* -- No need to use H2 for testing code that works on a database anymore!
-* -- And what about external services?.. you can't raise them in test containers...
+* -- Mocks are unreliable
+* -- Let's run everything in test containers and test it!
+* -- Using H2 database for testing is an outdated practice!
+* -- And what about external services?.. you can't run them in test containers...
 
 == Mocks of External Services
 
@@ -270,6 +284,7 @@ underTest = new RedisBackedCache(address, port);
 ----
 digraph G {
   graph [dpi = 200];
+scale=1.5;
   layout="neato";
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
@@ -308,6 +323,8 @@ image::vs.svg[]
 
 == Example from the book Humans vs. Computers 
 
+*Gojko Adzic*, Humans vs Computers, 2017
+
 "Let's release from prison everyone who has not committed serious crimes"
 
 [source, java]
@@ -321,9 +338,9 @@ catch (IOException e) {
 }
 ----
 
-== WireMock Can
+== WireMock features
 
-simulate a response from a service to a request
+Simulate a response from the service
 
 [plantuml]
 ----
@@ -335,9 +352,9 @@ Mock--> Caller : Response
 @enduml
 ----
 
-== WireMock can
+== WireMock features
 
-verify the calls made
+Verify calls to the service
 
 [plantuml]
 ----
@@ -350,9 +367,9 @@ Mock--> Caller : Response
 @enduml
 ----
 
-== WireMock can
+== WireMock features
 
-"spy" by intercepting calls to the real service
+"Spy" by intercepting calls to the real service
 
 [plantuml]
 ----
@@ -368,7 +385,7 @@ Mock -> "Real System": Request
 ----
 
 
-== What About RDBMS/NoSQL/Message Brokers and Others?
+== What about RDBMS/NoSQL/message brokers etc?
 
 
 [graphviz]
@@ -376,6 +393,7 @@ Mock -> "Real System": Request
 digraph G {
   graph [dpi = 200];
   layout="neato";
+  scale=1.5;
   node[shape=box];
   SUT[label="System\nUnder\nTest"];
 
@@ -396,14 +414,14 @@ digraph G {
 ----
 
 
-== What About RDBMS/NoSQL/Message Brokers and Others?
+== What about RDBMS/NoSQL/message brokers etc?
 
 
 [none]
 * -- It's too complicated to mock!
 * -- Hurray for containers!
 
-== Mocks vs TestContainers: Functionality
+== Mocks vs TestContainers: compatibility
 
 [cols="45a,10a,45a"]
 |===
@@ -416,13 +434,13 @@ image::vs.svg[]
 |
 [%step]
 [none]
-* image:thumbs-down.png[] Don't guarantee to behave the same as the real system.
-* image:thumbs-down.png[] Writing a bug-to-bug compatible mock is harder than the real system, no one ever does it.
+* image:thumbs-down.png[] No guarantees to behave the same as the real system.
+* image:thumbs-down.png[] Writing a bug-to-bug compatible mock is harder than to write the real system, no one ever does it.
 |
 |
 |===
 
-== Mocks vs TestContainers: Functionality
+== Mocks vs TestContainers: compatibility
 
 [cols="45a,10a,45a"]
 |===
@@ -455,7 +473,7 @@ image::vs.svg[]
 [%step]
 [none]
 * image:thumbs-up.png[] Just a regular dependency
-* image:thumbs-up.png[] Part of the test, starts instantly
+* image:thumbs-up.png[] Starts instantly, runs in the same process with the test
 |
 |
 
@@ -478,15 +496,15 @@ image::vs.svg[]
 |
 [none]
 * image:thumbs-up.png[] Just a regular dependency
-* image:thumbs-up.png[] Part of the test, starts instantly
+* image:thumbs-up.png[] Starts instantly, runs in the same process with the test
 |
 |
 [none]
-* image:shrug.png[] Require Docker (OK, it's everywhere now)
+* image:shrug.png[] Require Docker (OK, nowadays, it's available everywhere)
 
 [%step]
 [none]
-* image:shrug.png[] Need to download the image (depends on size and internet speed)
+* image:shrug.png[] Need to download the image (depends on the size and the internet speed)
 * image:shrug.png[] Need to start the container (from a few seconds to a couple of minutes)
 
 |===
@@ -495,13 +513,16 @@ image::vs.svg[]
 
 image::startup.png[]
 
-== Nothing can be done if
+== Worst situation
 
-image:thumbs-down.png[] "I have a Mac M1!"
+image:thumbs-down.png[] "I have Mac M1 and the container is not compatible!"
 
 [%notitle]
-== TC in Cloud
+== Testcontainers Cloud
 image::tc_cloud.png[]
+
+* Paid service
+* Requires good Internet connection (won't work on train)
 
 == Convenience
 
@@ -513,9 +534,9 @@ image::tc_cloud.png[]
 image::vs.svg[]
 ^.^|
 *Testcontainers*
-| image:thumbs-up.png[] Fast and reliable tests are more desirable to run frequently and write more of
+| image:thumbs-up.png[] If tests are fast and reliable, one wants to run them more often and write more of them
 |
-| image:thumbs-down.png[] "Scary" tests are too time-consuming to wait for and debug, making one want to skip their execution
+| image:thumbs-down.png[] "Heavy" tests are too time-consuming to run and debug, making one want to skip their execution
 |===
 
 
@@ -604,13 +625,19 @@ image::comparison.png[{image-60-width}]
 
 == JedisMock
 
-As of June 2022, supports 103 out of 225 commands (46%)
+* Also tested with a subset of native Redis tests written in Tcl/Tk  (tests that are being used for regression testing of Redis itself)
+
+image::native_redis_tests.png[{image-60-width}]
+
+== JedisMock
+
+As of April 2024, supports 153 out of 237 commands (64%)
 
 image::supported_redis_operations.png[]
 
 == JedisMock
 
-Bugs (behavior differing from the real Redis) are constantly being patched
+Bugs (behavior differing from the real Redis) are constantly being fixed
 
 image::jedis_mock_bugs.png[{image-70-width}]
 
